--- a/py250819.ipynb
+++ b/py250819.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe4YTsKoPHoFYWZKdqxhL6",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN9/R5h4XHZ6mzqjadMrrmy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,17 +24,454 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tranmai31231020941-pixel/1608/blob/main/py250819.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tranmai31231020941-pixel/250819/blob/main/py250819.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **250819**"
+      ],
+      "metadata": {
+        "id": "J3jf12s4DNjX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "compiler"
+      ],
+      "metadata": {
+        "id": "Ek0Wj3HT0ebE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile first.cpp\n",
+        "#include <stdio.h>\n",
+        "\n",
+        "int main(void) {\n",
+        "  int a = 27, b = 6, c;\n",
+        "  c = a % b;\n",
+        "  printf(\"The value of c is %d.\\n\", c);\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fKpSXkTJ4LrN",
+        "outputId": "64237a8b-fe59-45dd-b952-ea4a48c7d482"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting first.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!g++ first.cpp -o first\n",
+        "!./first"
+      ],
       "metadata": {
-        "id": "NdV6tuI9yab0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nZeO4NvA4zVa",
+        "outputId": "15f762e2-d36f-4e6a-b9f4-51002248af8b"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The value of c is 3.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Practice"
+      ],
+      "metadata": {
+        "id": "Ii481el074Ku"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hello, world\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X1lGBYEM7K5d",
+        "outputId": "72a73aa8-6bdf-4678-ecf0-6ddfb75c134b"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello, world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score = 80;\n",
+        "if score >=60 :\n",
+        "  print(\"Pass\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yqTXKSGM8MWm",
+        "outputId": "29188d00-5bdb-49f6-fff7-943152773955"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pass\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# comment\n",
+        "from platform import python_version\n",
+        "print(\"Python Version:\", python_version())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yjl9xww284sx",
+        "outputId": "de30868e-ebc4-4fe5-939b-7c34ec823cdf"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python Version: 3.11.13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=2\n",
+        "y=x+1\n",
+        "print(f'x={x}, y={y}')\n",
+        "print('x=%d, y=%d' % (x, y))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jx67NDgh88Gi",
+        "outputId": "a93e7467-35f2-4b24-a15d-42a1d6dcea44"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x=2, y=3\n",
+            "x=2, y=3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_input = input(\"Please enter some data: \")\n",
+        "print(f\"The type of the entered data is: {type(user_input)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VF8RJtSv92NN",
+        "outputId": "f521902b-3183-4a1b-86ff-102480779bbd"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter some data: 2\n",
+            "The type of the entered data is: <class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ép kiểu"
+      ],
+      "metadata": {
+        "id": "I_7m0j0w_7JW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = str(3) # x will be '3'\n",
+        "y = int(3) # y will be 3\n",
+        "z = float(3) # z will be 3.0\n",
+        "print(x, type(x))\n",
+        "print(y, type(y))\n",
+        "print(z, type(z))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F8qWhSna-RM_",
+        "outputId": "04275c42-0434-41dd-d1eb-e699919966ab"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 <class 'str'>\n",
+            "3 <class 'int'>\n",
+            "3.0 <class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## BMI"
+      ],
+      "metadata": {
+        "id": "UduxVnk1Cybi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tính BMI\n",
+        "height_cm = int(input(\"Nhập chiều cao (cm) \"))\n",
+        "weight_kg = int(input(\"Nhập cân nặng (kg) \"))\n",
+        "# process\n",
+        "height_m = height_cm / 100\n",
+        "BMI = weight_kg / (height_m ** 2)\n",
+        "# output\n",
+        "print(\"BMI của bạn: \" + str(round(BMI,1)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JoWFEH16BLtK",
+        "outputId": "62578855-63f0-4e9b-8e49-813c630f7c07"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập chiều cao (cm) 168\n",
+            "Nhập cân nặng (kg) 56\n",
+            "BMI của bạn: 19.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Future value"
+      ],
+      "metadata": {
+        "id": "A302XIzwC4fJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Future Value\n",
+        "pv = 100\n",
+        "r = 0.1\n",
+        "n = 7\n",
+        "fv = pv * ((1 + (r)) ** n)\n",
+        "print(round(fv, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5vT7QGsmC4JU",
+        "outputId": "a4a51438-ee71-4ffc-8478-6f36dc88baaa"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "194.87\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data structure"
+      ],
+      "metadata": {
+        "id": "65RUZktYDYxd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [\"apple\", \"banana\", \"cherry\"] #list\n",
+        "print(x, type(x))\n",
+        "\n",
+        "x = (\"apple\", \"banana\", \"cherry\") #tuple\n",
+        "print(x, type(x))\n",
+        "\n",
+        "x = {\"name\" : \"Tom\", \"age\" : 20} #dict\n",
+        "print(x, type(x))\n",
+        "\n",
+        "x = {\"apple\", \"banana\", \"cherry\"} #set\n",
+        "print(x, type(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cu9D_p_xDYMV",
+        "outputId": "1afb7f78-dc12-4102-e983-c67a7395d76d"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry'] <class 'list'>\n",
+            "('apple', 'banana', 'cherry') <class 'tuple'>\n",
+            "{'name': 'Tom', 'age': 20} <class 'dict'>\n",
+            "{'cherry', 'apple', 'banana'} <class 'set'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [60, 70, 80, 90]\n",
+        "print(len(x))\n",
+        "print(x[0])\n",
+        "print(x[1])\n",
+        "print(x[-1])\n",
+        "print(x[1:3])\n",
+        "print(x[:0:-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zzsg_ssXD77v",
+        "outputId": "87fd0055-2af7-4353-d931-55647171a64e"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "60\n",
+            "70\n",
+            "90\n",
+            "[70, 80]\n",
+            "[90, 80, 70]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python Dictionaries\n",
+        "accounts = {\"1001\": {\"name\": \"Cash\", \"balance\": 500.00, \"type\": \"Asset\"},\n",
+        "\"1002\": {\"name\": \"Accounts Receivable\", \"balance\": 1000.00, \"type\": \"Asset\"},\n",
+        "\"2001\": {\"name\": \"Accounts Payable\", \"balance\": 750.00, \"type\": \"Liability\"}}\n",
+        "\n",
+        "for account_number, account_info in accounts.items():\n",
+        "  print(\"Account number:\", account_number)\n",
+        "  print(\"Account name:\", account_info[\"name\"])\n",
+        "  print(\"Account balance:\", account_info[\"balance\"])\n",
+        "  print(\"Account type:\", account_info[\"type\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DuvumFblJW5h",
+        "outputId": "46390a98-06cc-48a7-a318-e6efac04557a"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Account number: 1001\n",
+            "Account name: Cash\n",
+            "Account balance: 500.0\n",
+            "Account type: Asset\n",
+            "Account number: 1002\n",
+            "Account name: Accounts Receivable\n",
+            "Account balance: 1000.0\n",
+            "Account type: Asset\n",
+            "Account number: 2001\n",
+            "Account name: Accounts Payable\n",
+            "Account balance: 750.0\n",
+            "Account type: Liability\n"
+          ]
+        }
+      ]
     }
   ]
 }
