--- a/py250819.ipynb
+++ b/py250819.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyN9/R5h4XHZ6mzqjadMrrmy",
+      "authorship_tag": "ABX9TyOFxypfq2lY5+AceY5CqpYW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -469,6 +468,250 @@
             "Account name: Accounts Payable\n",
             "Account balance: 750.0\n",
             "Account type: Liability\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## If elif else"
+      ],
+      "metadata": {
+        "id": "B70ipqEIMqBi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python if elif else\n",
+        "score = int(input(\"Nhập điểm: \"))\n",
+        "grade = \"\"\n",
+        "if score >=90:\n",
+        " grade = \"A\"\n",
+        "elif score >= 80:\n",
+        " grade = \"B\"\n",
+        "elif score >= 70:\n",
+        " grade = \"C\"\n",
+        "elif score >= 60:\n",
+        " grade = \"D\"\n",
+        "else:\n",
+        " grade = \"E\"\n",
+        "print(grade)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KPLUjT5PMtZq",
+        "outputId": "4fe6c6d7-469d-4e2d-d04f-01e65b1437d6"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập điểm: 89\n",
+            "B\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## For loops"
+      ],
+      "metadata": {
+        "id": "zX6edoMQNLrB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for loops\n",
+        "for i in range(1,10):\n",
+        "  for j in range(1,10):\n",
+        "    print(i, ' * ' , j , ' = ', i*j)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xDN-OMePNNvx",
+        "outputId": "c075f79a-e788-43d1-d5c8-93973c668faf"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  *  1  =  1\n",
+            "1  *  2  =  2\n",
+            "1  *  3  =  3\n",
+            "1  *  4  =  4\n",
+            "1  *  5  =  5\n",
+            "1  *  6  =  6\n",
+            "1  *  7  =  7\n",
+            "1  *  8  =  8\n",
+            "1  *  9  =  9\n",
+            "2  *  1  =  2\n",
+            "2  *  2  =  4\n",
+            "2  *  3  =  6\n",
+            "2  *  4  =  8\n",
+            "2  *  5  =  10\n",
+            "2  *  6  =  12\n",
+            "2  *  7  =  14\n",
+            "2  *  8  =  16\n",
+            "2  *  9  =  18\n",
+            "3  *  1  =  3\n",
+            "3  *  2  =  6\n",
+            "3  *  3  =  9\n",
+            "3  *  4  =  12\n",
+            "3  *  5  =  15\n",
+            "3  *  6  =  18\n",
+            "3  *  7  =  21\n",
+            "3  *  8  =  24\n",
+            "3  *  9  =  27\n",
+            "4  *  1  =  4\n",
+            "4  *  2  =  8\n",
+            "4  *  3  =  12\n",
+            "4  *  4  =  16\n",
+            "4  *  5  =  20\n",
+            "4  *  6  =  24\n",
+            "4  *  7  =  28\n",
+            "4  *  8  =  32\n",
+            "4  *  9  =  36\n",
+            "5  *  1  =  5\n",
+            "5  *  2  =  10\n",
+            "5  *  3  =  15\n",
+            "5  *  4  =  20\n",
+            "5  *  5  =  25\n",
+            "5  *  6  =  30\n",
+            "5  *  7  =  35\n",
+            "5  *  8  =  40\n",
+            "5  *  9  =  45\n",
+            "6  *  1  =  6\n",
+            "6  *  2  =  12\n",
+            "6  *  3  =  18\n",
+            "6  *  4  =  24\n",
+            "6  *  5  =  30\n",
+            "6  *  6  =  36\n",
+            "6  *  7  =  42\n",
+            "6  *  8  =  48\n",
+            "6  *  9  =  54\n",
+            "7  *  1  =  7\n",
+            "7  *  2  =  14\n",
+            "7  *  3  =  21\n",
+            "7  *  4  =  28\n",
+            "7  *  5  =  35\n",
+            "7  *  6  =  42\n",
+            "7  *  7  =  49\n",
+            "7  *  8  =  56\n",
+            "7  *  9  =  63\n",
+            "8  *  1  =  8\n",
+            "8  *  2  =  16\n",
+            "8  *  3  =  24\n",
+            "8  *  4  =  32\n",
+            "8  *  5  =  40\n",
+            "8  *  6  =  48\n",
+            "8  *  7  =  56\n",
+            "8  *  8  =  64\n",
+            "8  *  9  =  72\n",
+            "9  *  1  =  9\n",
+            "9  *  2  =  18\n",
+            "9  *  3  =  27\n",
+            "9  *  4  =  36\n",
+            "9  *  5  =  45\n",
+            "9  *  6  =  54\n",
+            "9  *  7  =  63\n",
+            "9  *  8  =  72\n",
+            "9  *  9  =  81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## While loops"
+      ],
+      "metadata": {
+        "id": "1ptmogMtNck5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# while loops\n",
+        "age = 10\n",
+        "while age < 20:\n",
+        "  print(age)\n",
+        "  age = age + 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tPiOyl4ZNf0A",
+        "outputId": "adc031f5-41ec-45a8-a397-fd0bc39681da"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Function def"
+      ],
+      "metadata": {
+        "id": "dvGMLHjTPSOa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python Function def\n",
+        "# indentation for blocks. four spaces\n",
+        "def getfv(pv, r, n):\n",
+        "  fv = pv * ((1 + (r)) ** n)\n",
+        "  return fv\n",
+        "fv = getfv(100, 0.1, 7)\n",
+        "print(round(fv, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fpmxz3P1PMRC",
+        "outputId": "bb028499-1153-4ece-da8c-b1030590e7e6"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "194.87\n"
           ]
         }
       ]
